Quartz sync: Jun 17, 2025, 9:33 PM